force-app/main/default/objects/Plan_Admission_Requirement__c/Plan_Admission_Requirement__c.object-meta.xml
<CustomObject>
    <description>Requirements to be met before being admitted to a program plan.</description>
    <label>Plan Admission Requirement</label>
    <nameField>
        <label>Admission Requirement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Admission Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>