force-app/main/default/objects/Plan_Admission_Requirement__c/fields/Long_Description__c.field-meta.xml
<CustomField>
    <fullName>Long_Description__c</fullName>
    <description>HTML for long descriptions.</description>
    <inlineHelpText>HTML for long descriptions.</inlineHelpText>
    <label>Long Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>