force-app/main/default/objects/Plan_Admission_Requirement__c/fields/Program_Plan__c.field-meta.xml
<CustomField>
    <fullName>Program_Plan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Program Plan that this admission requirement applies to.</description>
    <inlineHelpText>The Program Plan that this admission requirement applies to.</inlineHelpText>
    <label>Program Plan</label>
    <referenceTo>hed__Program_Plan__c</referenceTo>
    <relationshipLabel>Plan Admission Requirements</relationshipLabel>
    <relationshipName>Plan_Admission_Requirements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>