force-app/main/default/objects/Plan_Admission_Requirement__c/fields/Requirement_Detail__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Detail__c</fullName>
    <description>Detail to be displayed to potential students. Should be short enough to appear in a bullet point.</description>
    <inlineHelpText>Detail to be displayed to potential students. Should be short enough to appear in a bullet point.</inlineHelpText>
    <label>Requirement Detail</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>