force-app/main/default/objects/Plan_Admission_Requirement__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Order to sort.</description>
    <inlineHelpText>Order to sort.</inlineHelpText>
    <label>Sequence</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>