force-app/main/default/objects/Plan_Admission_Requirement__c/fields/Show_in_Detail_Card__c.field-meta.xml
<CustomField>
    <fullName>Show_in_Detail_Card__c</fullName>
    <defaultValue>true</defaultValue>
    <description>True if requirement appears in shortened detail.</description>
    <inlineHelpText>True if requirement appears in shortened detail.</inlineHelpText>
    <label>Show in Detail Card</label>
    <type>Checkbox</type>
</CustomField>