force-app/main/default/objects/Plan_Admission_Requirement__c/recordTypes/Application_Material.recordType-meta.xml
<RecordType>
    <fullName>Application_Material</fullName>
    <active>true</active>
    <description>Material that must be submitted for admission consideration.</description>
    <label>Application Material</label>
</RecordType>