force-app/main/default/objects/Plan_Admission_Requirement__c/recordTypes/Requirement.recordType-meta.xml
<RecordType>
    <fullName>Requirement</fullName>
    <active>true</active>
    <description>A requirement that must be met for admission consideration.</description>
    <label>Requirement</label>
</RecordType>